# bitpawn

./: CMakeLists.txt  README.md  run.bat  run.sh
include/: board.hpp
src/: board.cpp  main  main.cpp
tests/: test  test.cpp
